printed object into the HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="container">
+        <button type="button" id="button">crea</button>
+        <input type="text" id="input-text">
+        <p id="output"></p>
+
+
+
+
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
