--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button type="button" id="button">crea</button>
         <input type="text" id="input-text">
         <p id="output"></p>
+        <p id="output-due"></p>
 
 
 
