--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <section class="container">
         <button type="button" id="button">crea</button>
-        <input type="text" id="input-text">
+        <label for="input-name">Nome</label>
+        <input type="text" id="input-name">
+        <label for="input-name">Cognome</label>
+        <input type="text" id="input-secondName">
+        <label for="input-name">Età</label>
+        <input type="text" id="input-eta">
+
         <p id="output"></p>
-        <p id="output-due"></p>
+        <div id="output-due">
+            
+        </div>
 
 
 
